[package]
name = "graph_db"
version = "0.1.0"
edition = "2021"

[lib]
name = "graph_db"
path = "src/lib.rs"

[[bin]]
name = "graph_db_server"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.9"
once_cell = "1.13"
prost = "0.11"
prost-types = "0.11"
bincode = "1.3"
savefile = "0.10"
async-trait = "0.1"
url = "2.2"
md5 = "0.7"
rand = "0.8"
rusqlite = "0.28"
actix-interop = "0.4"

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dependencies.uuid]
version = "1.1"
default-features = false
features = ["serde", "v4"]

[dependencies.petgraph]
version = "*"
default-features = false
features = ["stable_graph", "serde-1"]

[dependencies.futures-util]
version = "0.3"
default-features = false

[dependencies.tokio]
version = "1.20"
default-features = true
features = ["macros", "rt-multi-thread", "sync"]

[dependencies.tonic]
version = "0.8"

[dependencies.actix]
version = "0.13"

[dependencies.actix-rt]
version = "2.7"

[build-dependencies]
tonic-build = "0.8"

[patch.crates-io.petgraph]
git = "https://github.com/petgraph/petgraph.git"
branch = "master"

[dev-dependencies]
serde_json = "1"
